# LiteCordBackend

./: .env.example  .gitignore  Cargo.toml  Rocket.toml  db.surql
LiteCordBruno/: bruno.json
LiteCordBruno/Auth/: Login.bru  SignUp.bru  Signin.bru
LiteCordBruno/environments/: dev.bru
src/: error.rs  hashing.rs  jwt.rs  lib.rs  main.rs  models.rs  routes.rs
src/models/: db.rs  user.rs
